@@ -9,7 +9,10 @@ rsvg \- Turn SVG files into raster images
 RSVG coverts SVG images into PNG and JPEG raster images.
 .SS OPTIONS
 .TP
-.I "\-d \-\-dpi number"
+.I "\-d \-\-dpi-x number"
+Set the resolution of the image in pixels per inch. RSVG's current default is 90dpi
+.TP
+.I "\-p \-\-dpi-y number"
 Set the resolution of the image in pixels per inch. RSVG's current default is 90dpi
 .TP
 .I "\-x \-\-x\-zoom number"
